k8s-webhook-demo/config/samples/validating.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: admission-webhook
  name: validating
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJd01URXlOekV5TlRjek9Gb1hEVE13TVRFeU5URXlOVGN6T0Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTEp0CjJUMFBPTW5NZk4zSDlmUHJMZXRTSG1ybWtvKzBXN2JUcE54UHdNN2FabDdKcVErME1WeS9VWkMxMUhnQlVLWVcKb3hDRmNRaTRRcjBwdUEyWHhHRUx4dDhUUWszdEhGL3l1UTJsVXVMcUxieHB5b0IrVVY2TEJObms1ejJwZU5pdApXSmtTall3UTVDSV [...]
    service:
      name: admission-webhook
      namespace: dev
      path: /v1/api/validate
  name: validate.admission-webhook.walk1ng.io
  failurePolicy: Fail
  namespaceSelector: {}
  rules:
  - apiGroups:
    - "apps"
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - deployments
